# tinyrender

./: .gitignore
code/: main.cpp  tinyrender.cpp  tinyrender.h
dependency/imgui/: CMakeLists.txt
dependency/imgui/backends/: imgui_impl_glfw.cpp
dependency/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
projects/: imgui.ini  tinyrender.sln  tinyrender.vcxproj  tinyrender.vcxproj.filters
